--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
     "angular": "~1.4.8",
     "jquery": "~2.1.4",
     "semantic": "~2.1.6",
-    "angular-route": "~1.4.8"
+    "angular-route": "~1.4.8",
+    "angular-mocks": "~1.4.8"
   }
 }
