--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,7 @@
     "jquery": "~2.1.4",
     "semantic": "~2.1.6",
     "angular-route": "~1.4.8",
-    "angular-mocks": "~1.4.8"
+    "angular-mocks": "~1.4.8",
+    "moment": "momentjs#~2.10.6"
   }
 }
