--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "homepage": "https://github.com/SRARAD/epa-digital-services-rfi#readme",
   "dependencies": {
-    "express": "^4.13.3"
+    "express": "^4.13.3",
+    "jsftp": "^1.5.3"
   },
   "devDependencies": {
     "jasmine-core": "^2.4.1",
