--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "karma start karma.conf.js"
+    "test": "find ./test/src/ -name '*Spec.js' | xargs mocha -R spec && karma start karma.conf.js"
   },
   "repository": {
     "type": "git",
@@ -29,6 +29,8 @@
     "karma-jasmine": "^0.3.6",
     "karma-junit-reporter": "^0.3.8",
     "karma-phantomjs-launcher": "^0.2.1",
-    "phantomjs": "^1.9.19"
+    "mocha": "^2.3.4",
+    "phantomjs": "^1.9.19",
+    "rewire": "^2.5.1"
   }
 }
