--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "start": "node index.js",
     "test": "npm run mocha && npm run karma",
     "test-xml": "npm run mocha-xml && npm run karma",
-    "mocha": "find ./test/src/ -name '*Spec.js' | xargs mocha -R spec",
-    "mocha-xml": "find ./test/src/ -name '*Spec.js' | xargs mocha -R spec --reporter mocha-junit-reporter --reporter-options mochaFile=./target/test-results.xml",
+    "mocha": " mocha ./test/src -R spec",
+    "mocha-xml": "mocha ./test/src -R spec --reporter mocha-junit-reporter --reporter-options mochaFile=./target/test-results.xml",
     "karma": "karma start karma.conf.js"
   },
   "repository": {
