--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epa-digital-services-rfi",
-  "version": "0.1.0",
+  "version": "1.0.0-RC1",
   "description": "",
   "main": "index.js",
   "directories": {
