--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "epa-digital-services-rfi",
-  "version": "1.0.0-RC1",
+  "version": "1.0.0",
   "description": "",
   "license": "MIT",
   "main": "index.js",
